# hermespanel

./: .gitignore  .lintstagedrc  .prettierignore  .prettierrc  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: mvp-design.md
docs/screenshots/: README.md
scripts/: capture-macos-window.sh  dev-server-reuse.sh  tauri-dev-clean.sh
src/: App.tsx  index.css  main.js  router.js  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs
src-tauri/src/application/: desktop_manager.rs  hermes_manager.rs  mod.rs
src-tauri/src/commands/: config.rs  cron.rs  dashboard.rs  desktop.rs  extensions.rs  gateway.rs  logs.rs  memory.rs  mod.rs  profiles.rs  sessions.rs  skills.rs
src-tauri/src/infrastructure/: desktop.rs  hermes.rs  mod.rs
src/components/: AppSidebar.tsx  AppTopbar.tsx  ErrorBoundary.tsx  NoticeToast.tsx  Skeleton.tsx  Toast.tsx  VirtualScroll.tsx  runtime-posture.tsx  sidebar.js  skeleton.css  toast.ts  topbar.js  ui.test.tsx  ui.tsx
src/hooks/: useAppShell.ts  useKeyboardShortcuts.tsx  useSidebar.ts  useSmartPolling.ts
src/lib/: api.test.ts  api.ts  create-legacy-route.ts  desktop.ts  diagnostics.ts  drilldown.ts  format.ts  navigation.ts  panel-config.ts  panel-state.ts  posture.ts  runtime.ts
src/pages/: ChatPage.tsx  ConfigPage.tsx  CronPage.tsx  DashboardPage.tsx  DiagnosticsPage.tsx  cron.js  (+27 more)
(+20 files in other folders)
