[package]
name = "hermespanel"
version = "0.1.0"
edition = "2021"
description = "Hermes Agent 桌面管理客户端"
authors = ["lixiaodong"]

[lib]
name = "hermespanel_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
thiserror = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
